--- a/about.html
+++ b/about.html
@@ -88,7 +88,7 @@ https://templatemo.com/tm-545-finance-business
     </header>
 
     <!-- Page Content -->
-    <div class="page-heading header-text">
+    <div class="page-heading1 header-text">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
@@ -138,19 +138,19 @@ https://templatemo.com/tm-545-finance-business
           <div class="col-md-8">
             <section class='tabs-content'>
               <article id='tabs-1'>
-                <img src="assets/images/single_service_01.jpg" alt="">
+                <!--<img src="assets/images/single_service_01.jpg" alt="">-->
                 <h4>Visión</h4>
                 <p>Nuestra visión se extiende a dos factores:
                 <br><br>Ser una empresa que contribuya a <strong>reducir el índice de violencia e inseguridad</strong>, generar paz y promover la confianza y fortalecimiento de las instituciones en nuestro país, siempre preservando la vida humana y su patrimonio.<br><br> Ser una empresa que contribuya al <strong>desarrollo y bienestar de nuestros colaboradores</strong> a través de una formación integral que desarrolle su potencial humano.</p>
               </article>
               <article id='tabs-2'>
-                <img src="assets/images/single_service_02.jpg" alt="">
+                <!--<img src="assets/images/single_service_02.jpg" alt="">-->
                 <h4>Misión</h4>
                 <p>Nuestra misión se basa en tres pilares:
                   <br><br>Es primordial generar <strong>tranquilidad</strong> al cliente, confianza y certeza de que se encuentra protegido a través de nuestros servicios siempre alineados a las necesidades específicas de cada cliente. <br><br>Estar <strong>actualizados</strong> en tendencias de seguridad, tecnología y procedimientos para ofrecer un servicio de vanguardia. <br><br><strong>Mejora continua</strong> como filosofía de trabajo en todos nuestros niveles jerárquicos, estrategias y metodología para constantemente elevar nuestros estándares.</p>
                 </article>
               <article id='tabs-3'>
-                <img src="assets/images/single_service_03.jpg" alt="">
+                <!--<img src="assets/images/single_service_03.jpg" alt="">-->
                 <h4>Nuestros Valores</h4>
                 <h6>Integridad</h6><br>
                 <p>Actuar con consistencia ética y responsabilidad ante cualquier situación, comprometidos con nuestro trabajo como proveedores de seguridad.</p>
