--- a/contact.html
+++ b/contact.html
@@ -88,7 +88,7 @@ https://templatemo.com/tm-545-finance-business
     </header>
 
     <!-- Page Content -->
-    <div class="page-heading header-text">
+    <div class="page-heading3 header-text">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
@@ -123,7 +123,7 @@ https://templatemo.com/tm-545-finance-business
               <i class="fa fa-whatsapp"></i>
               <h4>WhatsApp</h4>
               <p>Si lo prefieres también puedes contactarnos por este medio.</p>
-              <a href="https://api.whatsapp.com/send?phone=4424140624&text=Hola! Necesito mas información sobre...">Envíanos un mensaje</a>
+              <a href="https://api.whatsapp.com/send?phone=524424140624&text=Hola! Necesito mas información sobre...">Envíanos un mensaje</a>
             </div>
           </div>
         </div>
