--- a/index.html
+++ b/index.html
@@ -61,11 +61,7 @@ https://templatemo.com/tm-545-finance-business
     <header class="header">
       <nav class="navbar navbar-expand-lg">
         <div class="container">
-          <picture>
-            <source srcset="./assets/images/Logos/Consepril40.png"  href="#top" media="(max-width: 500px)">
-            <source srcset="./assets/images/Logos/Consepril70.png"  media="(min-width: 600px">
-            <img src="./assets/images/Logos/Consepril40.png" alt="">
-          </picture>
+          <a class="navbar-brand" href="index.html"><h2>CONSEPRIL</h2></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -130,7 +126,7 @@ https://templatemo.com/tm-545-finance-business
                 </div>
             </div>
           </div>
-          <div class="item item-3">
+          <div class="item item-4">
             <div class="img-fill">
                 <div class="text-content container">
                   <h6>Sistemas GPS</h6>
@@ -140,7 +136,7 @@ https://templatemo.com/tm-545-finance-business
                 </div>
             </div>
           </div>
-          <div class="item item-3">
+          <div class="item item-5">
             <div class="img-fill">
                 <div class="text-content container">
                   <h6>Consultoría Legal</h6>
@@ -161,13 +157,18 @@ https://templatemo.com/tm-545-finance-business
         <div class="row">
           <div class="col-md-12">
             <div class="section-heading">
-              <h2>Soluciones efectivas en<em> Seguridad Privada</em></h2>
-              <span>Con más de 25 años de experiencia, entendemos las complejidades de nuestra industria y podemos ayudarte a mantener tus instalaciones, activos, personal y clientes a salvo.</span>
+              <picture>
+                <source srcset="./assets/images/Logos/ConseprilAll1.png" media="(max-width: 500px)">
+                <source srcset="./assets/images/Logos/ConseprilAll.png" media="(min-width: 600px">
+                <img src="./assets/images/Logos/Consepril40.png" alt="">
+              </picture><br><br>
+              <h3>Soluciones efectivas en<em> Seguridad Privada</em></h3>
+              <span>Con más de 25 años de experiencia, entendemos las complejidades de nuestra industria y podemos ayudar a mantener tus instalaciones, activos, personal y clientes a salvo.</span>
             </div>
           </div>
           <div class="col-md-6">
             <div class="service-item">
-              <img src="assets/images/guardiaex.jpeg" alt="">
+              <img src="assets/images/Guardias.png" alt="">
               <div class="down-content">
                 <h4>Guardias intramuros</h4>
                 <p>Elementos de seguridad para el resguardo de tus instalaciones y prevenir siniestros, robos o accidentes, apegándose a un proceso establecido y autorizado por el cliente.</p>
@@ -177,7 +178,7 @@ https://templatemo.com/tm-545-finance-business
           </div>
           <div class="col-md-6">
             <div class="service-item">
-              <img src="assets/images/custodiaex.jpeg" alt="">
+              <img src="assets/images/Custodias.png" alt="">
               <div class="down-content">
                 <h4>Custodias de bienes </h4>
                 <p>Desde cualquier estado de la república y con monitoreo GPS para llevar a salvo a las personas y mercancías custodiadas a su destino final.</p>
@@ -187,7 +188,7 @@ https://templatemo.com/tm-545-finance-business
           </div>
           <div class="col-md-6">
             <div class="service-item">
-              <img src="assets/images/gpsex.webp" alt="">
+              <img src="assets/images/GPS.png" alt="">
               <div class="down-content">
                 <h4>Sistemas GPS</h4>
                 <p>Dispositivos GPS y monitoreo para flotillas de transporte o distribución. Dispositivos portátiles, integrados y cerraduras GPS.</p>
@@ -197,7 +198,7 @@ https://templatemo.com/tm-545-finance-business
           </div>
             <div class="col-md-6">
               <div class="service-item">
-                <img src="assets/images/abogadosex.jpeg" alt="">
+                <img src="assets/images/legal.png" alt="">
                 <div class="down-content">
                   <h4>Consultoría Legal</h4>
                   <p>Análisis del expediente, asesoría en el proceso jurídico, propuesta de soluciones y resolución de conflictos.</p>
@@ -351,7 +352,7 @@ https://templatemo.com/tm-545-finance-business
               <div class="row">
                 <div class="col-md-6">
                   <div class="left-image">
-                    <img src="assets/images/nosex.jpeg" alt="">
+                    <img src="assets/images/about.png" alt="">
                   </div>
                 </div>
                 <div class="col-md-6 align-self-center">
