--- a/services.html
+++ b/services.html
@@ -88,7 +88,7 @@ https://templatemo.com/tm-545-finance-business
     </header>
 
     <!-- Page Content -->
-    <div class="page-heading header-text">
+    <div class="page-heading2 header-text">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
@@ -113,7 +113,7 @@ https://templatemo.com/tm-545-finance-business
           <div class="col-md-8">
             <section class='tabs-content'>
               <article id='tabs-1'>
-                <img src="assets/images/single_service_01.jpg" alt="">
+                <img src="assets/images/guardias-servs.png" alt="">
                 <h4>Guardias Intramuros</h4>
                 <p style="text-align: justify;">Este tipo de servicio tiene la finalidad de salvaguardar la integridad de las personas y el patrimonio de su empresa u organización. Diseñamos y desarrollamos procesos para minimizar pérdidas o mermas.
                   <br><br>
@@ -129,7 +129,7 @@ https://templatemo.com/tm-545-finance-business
                   <br>Este servicio incluye supervisión operativa y monitoreo los 365 días del año.</p>
               </article>
               <article id='tabs-2'>
-                <img src="assets/images/single_service_02.jpg" alt="">
+                <img src="assets/images/custodias-servs.png" alt="">
                 <h4>Custodias de bienes</h4>
                 <p style="text-align: justify;">Nuestro equipo de custodios está preparado para enfrentar situaciones de riesgo mediante técnicas evasivas y disuasivas enfocadas a prevenir el peligro y llevar a salvo a las personas y mercancías custodiadas a su destino final.<br><br>
 
@@ -148,7 +148,7 @@ https://templatemo.com/tm-545-finance-business
                   Nuestras patrullas están rotuladas, cuentan con botónes de pánico y son monitoreadas vía GPS desde nuestra plataforma.</p>
               </article>
               <article id='tabs-3'>
-                <img src="assets/images/single_service_03.jpg" alt="">
+                <img src="assets/images/GPS-servs.png" alt="">
                 <h4>Sistemas GPS</h4>
                 <p style="text-align: justify;">El sistema de posicionamiento global (GPS) consiste en un sistema global de navegación satelital que proporciona información de geo-localización periodicamente. Es una herramienta que nos ayuda a vigilar que el autotransporte o mercancía siga la trayectoria esperada y en caso de siniestro o robo, poder localizar la unidad y con ayuda de las autoridades recuperarla.
                     <br><br>
@@ -163,7 +163,7 @@ https://templatemo.com/tm-545-finance-business
                   Nuestro centro de monitero y control está activo 24/7 y pueden establecer geocercas dentro de nuestra plataforma para notificar y tomar acción en caso que el vehículo salga de la ruta preestablecida.</p>
               </article>
               <article id='tabs-4'>
-                <img src="assets/images/single_service_04.jpg" alt="">
+                <img src="assets/images/legal-servs.png" alt="">
                 <h4>Consultoría Legal</h4>
                 <p style="text-align: justify;">Ofrecemos servicios especializados mediante la asesoría y consultoría respecto a las operaciones corporativas y/o cumplimiento de obligaciones de las empresas; así como también la solución de problemas de negocios de los clientes.
                   <br><br>
